=========================================================================
CHANGE LOG
=========================================================================

2008-01-20  Warren L. DeLano <warren@delsci.com>	

	* additional work towards multiple PyMOLs in one Python.
	
2008-01-18  Warren L. DeLano <warren@delsci.com>	

	* improved Python 2.5 / 64-bit compatibility (PyDict_Next, etc.)

	* migrated to numpy
	
2008-01-18  Warren L. DeLano <warren@delsci.com>	

	* extensive refactoring for PyMOL2 & ActiveX
	
2008-01-16  Warren L. DeLano <warren@delsci.com>	

	* fixed surface_type=1, broken in the previous beta

	* refactored molecular surfacing routines 
	
2008-01-15  Warren L. DeLano <warren@delsci.com>	

	* ExtensionClass & sglite broke on 64 bit with Python 2.5.1 so
	  they have been replaced with simple Python symmetry tables.
	
2008-01-02  Warren L. DeLano <warren@delsci.com>	

	* added automatic xtal symm expansion for maps about molecules
	
2007-12-15  Warren L. DeLano <warren@delsci.com>	

	* rock now works within movies
	
	* movie_rock setting 	
	
2007-12-11  Warren L. DeLano <warren@delsci.com>	

	* anisotropic temperature factors now "u_aniso" in chempy model.
	
2007-12-10  Warren L. DeLano <warren@delsci.com>	

	* fixed object name validation for "create" 
	
2007-12-06  Warren L. DeLano <warren@delsci.com>	

	* first CIF reading code (barely functional)
	
2007-12-05  Warren L. DeLano <warren@delsci.com>	

	* anisotropic B factors now preserved in session files
	
	* cartoon_ladder_mode, cartoon_ladder_color, cartoon_ring_color,
	  cartoon_ring_width, cartoon_ring_radius, cartoon_ladder_radius
	  can all now be set per-atom (per-residue, really)

2007-12-04  Warren L. DeLano <warren@delsci.com>	

	* added additional workaround for reading tricky PQR files

	* cartoon_ring_mode can now be set per-atom (per-residue, really)

2007-11-30  Warren L. DeLano <warren@delsci.com>	

	* ANISOU records now supported in PDB files
